added cluster storage

--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@fitbit/sdk": "~5.0.1",
-    "@fitbit/sdk-cli": "^1.7.3"
+    "@fitbit/sdk-cli": "^1.7.3",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5"
   },
   "fitbit": {
     "appUUID": "d7ed5a86-e74e-4147-b436-c1c10bb92c67",
     "appType": "app",
+    "appClusterID": "my.alphabet.cluster",
+    "developerID": "78fe8355-c47c-440b-8782-2bfc9d8653e1",
     "appDisplayName": "Fitbit Full Example",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
-    "requestedPermissions": [],
+    "requestedPermissions": [
+      "access_app_cluster_storage"
+    ],
     "buildTargets": [
       "atlas",
       "vulcan"
@@ -24,12 +33,5 @@
   "scripts": {
     "build": "fitbit-build",
     "debug": "fitbit"
-  },
-  "dependencies": {
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5"
   }
 }
