--- a/package.json
+++ b/package.json
@@ -4,25 +4,22 @@
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
-    "@fitbit/sdk": "~5.0.1",
+    "@fitbit/sdk": "~6.0.2",
     "@fitbit/sdk-cli": "^1.7.3",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.1",
+    "eslint-plugin-react": "^7.26.1",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1"
   },
   "fitbit": {
-    "appUUID": "d7ed5a86-e74e-4147-b436-c1c10bb92c67",
     "appType": "app",
-    "appClusterID": "my.alphabet.cluster",
-    "developerID": "78fe8355-c47c-440b-8782-2bfc9d8653e1",
     "appDisplayName": "Fitbit Full Example",
     "iconFile": "resources/icon.png",
     "wipeColor": "#ffffff",
-    "requestedPermissions": [
-      "access_app_cluster_storage"
-    ],
+    "requestedPermissions": [],
     "buildTargets": [
       "atlas",
       "vulcan"
@@ -32,6 +29,11 @@
   },
   "scripts": {
     "build": "fitbit-build",
-    "debug": "fitbit"
+    "debug": "fitbit",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
